--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,24 +22,25 @@
    */
 
   /* gradient */
+
   --bg-gradient-onyx: linear-gradient(
     to bottom right, 
-    hsl(207, 100%, 97%) 3%, 
-    hsl(207, 100%, 97%) 97%
+    hsl(240, 1%, 25%) 3%, 
+    hsl(0, 0%, 19%) 97%
   );
   --bg-gradient-jet: linear-gradient(
     to bottom right, 
-    hsl(207, 100%, 97%) 0%, 
-    hsl(207, 100%, 97%) 100%
+    hsla(240, 1%, 18%, 0.251) 0%, 
+    hsla(240, 2%, 11%, 0) 100%
   ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
-    hsl(219, 81%, 33%) 0%, 
-    hsl(242, 100%, 28%) 50%
+    hsl(45, 100%, 71%) 0%, 
+    hsla(36, 100%, 69%, 0) 50%
   );
   --bg-gradient-yellow-2: linear-gradient(
     135deg, 
-    hsla(48, 38%, 97%, 0.251) 0%, 
+    hsla(45, 100%, 71%, 0.251) 0%, 
     hsla(35, 100%, 68%, 0) 59.86%
   ), hsl(240, 2%, 13%);
   --border-gradient-onyx: linear-gradient(
@@ -49,21 +50,21 @@
   );
   --text-gradient-yellow: linear-gradient(
     to right, 
-    hsl(240, 2%, 13%), 
-    hsla(240, 2%, 13%, 0.841)
+    hsl(45, 100%, 72%), 
+    hsl(35, 100%, 68%)
   );
 
   /* solid */
 
-  --jet: hsl(0, 0%, 100%);
-  --onyx: hsl(0, 0%, 100%);
+  --jet: hsl(0, 0%, 22%);
+  --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(0, 0%, 100%);
-  --smoky-black: hsl(0, 0%, 100%);
-  --white-1: hsl(236, 86%, 50%);
-  --white-2: hsl(236, 86%, 50%);
-  --orange-yellow-crayola: hsl(236, 86%, 50%);
-  --vegas-gold: hsl(236, 86%, 50%);
+  --eerie-black-2: hsl(240, 2%, 12%);
+  --smoky-black: hsl(0, 0%, 7%);
+  --white-1: hsl(0, 0%, 100%);
+  --white-2: hsl(0, 0%, 98%);
+  --orange-yellow-crayola: hsl(45, 100%, 72%);
+  --vegas-gold: hsl(45, 54%, 58%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
